--- a/binary/gsfe/lmp_gsfe.in
+++ b/binary/gsfe/lmp_gsfe.in
@@ -20,7 +20,7 @@ variable        xh equal 2
 variable        yl equal 0
 variable        yh equal 2
 variable        zl equal 0
-variable        zh equal 4
+variable        zh equal 8
 
 lattice         bcc ${latparam} orient x 1 1 -2 orient y 1 1 1 orient z 1 -1 0
 region          mybox block ${xl} ${xh} ${yl} ${yh} ${zl} ${zh}
@@ -62,11 +62,11 @@ group		lobound region lobound
 group		boundary union lobound upbound
 group		mobile subtract all boundary
 
-#variable        d equal 1
-#variable        mid equal ${zmid}+${latparam}/sqrt(2.)*(${d}-10)
+variable        d equal 10.5
+variable        mid equal ${zmid}+${latparam}/sqrt(2.)*(${d}-10)
 
-region		upper block INF INF INF INF ${zmid} INF units box      #variable
-region		lower block INF INF INF INF INF ${zmid} units box      #variable
+region		upper block INF INF INF INF ${mid} INF units box      #variable
+region		lower block INF INF INF INF INF ${mid} units box      #variable
 
 group		top region upper
 group		bot region lower
